--- a/my-nextjs-site/vercel.json
+++ b/my-nextjs-site/vercel.json
@@ -1,6 +1,10 @@
 {
-  "buildCommand": "echo 'No build needed for static HTML'",
-  "outputDirectory": ".",
+  "builds": [
+    {
+      "src": "demo-final.html",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     {
       "src": "/",
